@@ -1,5 +1,12 @@
 2012-02-17 Philipp Klaus Krause <pkk AT spth.de>
 
+	* device/lib/z80/divunsigned.s,
+	  device/lib/z180/divunsigned.s,
+	  device/lib/r2k/divunsigned.s:
+	  Remove some leftover code for handling division by zero (patch by parerga, #3488149).
+
+2012-02-17 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/gcc-torture-execute-pr37924.c:
 	  Fix gcc compilation failure.
 
